--- a/src/app/pages/account-product-list/account-product-list.page.html
+++ b/src/app/pages/account-product-list/account-product-list.page.html
@@ -3,11 +3,20 @@
   
   <ion-toolbar>
 
-    <ion-buttons >
-      <ion-button [disabled]="accountProduct" id="select-items" >{{'app.newitem' | translate}}</ion-button>
-    </ion-buttons>
 
-    <ion-title class="ion-text-center">{{ 'accountproduct.accountproductmenu' | translate }}</ion-title>
+        <ion-buttons >
+          <ion-button [disabled]="accountProduct"  id="select-items" >{{'app.newitem' | translate}}</ion-button>
+        </ion-buttons>
+
+ 
+   
+      @if (accountProduct) {
+        <ion-title class="ion-text-center"> {{ accountProduct!.product_name }}  </ion-title> 
+       }
+       @else{
+        <ion-title class="ion-text-center"> {{ 'accountproduct.accountproductmenu' | translate }} </ion-title>
+       }
+    
   
     <ion-buttons slot="end">
       <ion-back-button  [routerLink]="['/home/notifications']" ></ion-back-button>
@@ -15,15 +24,12 @@
  
   </ion-toolbar>
 
-  <ion-toolbar>
-    <ion-searchbar #inputSearch [debounce]="500" placeholder="{{ 'app.search' | translate }}"  (ionInput)="searchbarInputAccountProducts($event)"></ion-searchbar>
-  </ion-toolbar>
-
-  @if (accountProduct) {
+  @if (!accountProduct) {
     <ion-toolbar>
-      <ion-title>{{ accountProduct!.product_name }}</ion-title>
+      <ion-searchbar #inputSearch [debounce]="500" placeholder="{{ 'app.search' | translate }}"  (ionInput)="searchbarInputAccountProducts($event)"></ion-searchbar>
     </ion-toolbar>
-}
+  }
+
 </ion-header>
 
 <ion-content color="light">
@@ -70,6 +76,7 @@
 </ion-content>
 
 <ion-modal trigger="select-items" #modal (willDismiss)="onWillDismiss($event)">
+ 
   <ng-template>
     <app-multi-selection-search
       class="ion-page"
