--- a/src/app/pages/category/category.page.html
+++ b/src/app/pages/category/category.page.html
@@ -120,7 +120,7 @@
       <ion-row>
         
         <ion-col>
-          <ion-label expand="full" (click)="openPopOver($event)">{{categoryName!.name}}</ion-label>
+          <ion-label expand="full" (click)="openPopOver($event)">{{groupName!.name}}</ion-label>
         </ion-col>
     
       </ion-row>
