--- a/src/app/pages/group-profile/group-profile.page.html
+++ b/src/app/pages/group-profile/group-profile.page.html
@@ -11,10 +11,10 @@
   </div>
   <ion-grid >
       <ion-row  class="ion-align-items-center">
-        <ion-col>{{currentCategory.name}}</ion-col>
+        <ion-col>{{currentGroup.name}}</ion-col>
       </ion-row>
       <ion-row  class="ion-align-items-center">
-        <ion-col>{{currentCategory.descr}} </ion-col>
+        <ion-col>{{currentGroup.descr}} </ion-col>
       </ion-row>
   </ion-grid>
 </ion-content>
