--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,80 +1,33 @@
-<ion-menu side="end" contentId="main-content">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Menu Content</ion-title>
-    </ion-toolbar>
-  </ion-header>
-  <ion-content class="ion-padding">This is the menu content.
-    <ion-list lines="none">
-      <ion-menu-toggle auto-hide="false">
-        <ion-item detail="false"  routerLink="/category">
-          <ion-label>
-            <ion-text color="primary">
-              Category
-            </ion-text>
-          </ion-label>
-        </ion-item>
-        <ion-item detail="false"  routerLink="/product">
-          <ion-label>
-            <ion-text color="primary">
-              Product
-            </ion-text>
-          </ion-label>
-        </ion-item>
-        
-        <ion-item detail="false"  [routerLink]="accountProductsUrl">
-          <ion-label>
-            <ion-text color="primary">
-              Product List
-            </ion-text>
-          </ion-label>
-        </ion-item>
 
-        <ion-item detail="false"  [routerLink]="accountOfferUrl">
-          <ion-label>
-            <ion-text color="primary">
-              Offer List
-            </ion-text>
-          </ion-label>
-        </ion-item>
-
-      </ion-menu-toggle>
-    </ion-list>
-  </ion-content>
-</ion-menu>
-<div class="ion-page" id="main-content">
-
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>{{titleHomePage}}</ion-title> 
-      <ion-buttons slot="end">
-        <ion-menu-button></ion-menu-button>
-      </ion-buttons>
-    </ion-toolbar>
-  </ion-header>
   <ion-content class="ion-padding"> 
-  
-    <ion-tabs>
+
+    <ion-tabs >
+
       <ion-tab-bar slot="bottom">
 
-        <ion-tab-button tab="notifications" (click)="this.titleHomePage='notifications'">
-          <ion-icon  name="notifications"></ion-icon>
-          <ion-label>Notifications</ion-label>
+        <ion-tab-button tab="{{mainPage}}" (click)="this.titleHomePage='app_menu.main'">
+          <ion-icon name="home-outline"></ion-icon>
+          <ion-label>{{ 'app_menu.main' | translate }}</ion-label>
         </ion-tab-button>
     
-        <ion-tab-button tab="messages" (click)="this.titleHomePage='messages'">
-          <ion-icon  name="send"></ion-icon>
-          <ion-label>Messages</ion-label>
+        <ion-tab-button tab="{{cartPage}}" (click)="this.titleHomePage='app_menu.shopping_cart'">
+          <ion-icon name="cart-outline"></ion-icon>
+          <ion-label> {{ 'app_menu.shopping_cart' | translate }} </ion-label>
         </ion-tab-button>
     
-        <ion-tab-button tab="settings" (click)="this.titleHomePage='settings'">
+        <ion-tab-button tab="{{suppliersPage}}" (click)="this.titleHomePage='app_menu.suppliers'">
           <ion-icon  name="cog"></ion-icon>
-          <ion-label>settings</ion-label>
+          <ion-label>{{ 'app_menu.suppliers' | translate }}</ion-label>
+        </ion-tab-button>
+
+        <ion-tab-button tab="{{offerSuppliersPage}}" (click)="this.titleHomePage='app_menu.offers'">
+          <ion-icon name="cash-outline"></ion-icon>
+          <ion-label>{{ 'app_menu.offers' | translate }}</ion-label>
         </ion-tab-button>
     
       </ion-tab-bar>
     </ion-tabs>
     
   </ion-content>
-</div>
+
 
