--- a/src/app/pages/list-suppliers/list-suppliers.page.html
+++ b/src/app/pages/list-suppliers/list-suppliers.page.html
@@ -1,5 +1,9 @@
 
-<app-main-menu class="main-menu" [textMenu]="'app_menu.main'" [hasBackButton]="true" >  </app-main-menu>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>List Suppliers</ion-title>
+  </ion-toolbar>
+</ion-header>
 <ion-content >
   <ion-header collapse="condense">
     <ion-toolbar>
