--- a/src/app/pages/product/product.page.html
+++ b/src/app/pages/product/product.page.html
@@ -204,7 +204,13 @@
 
   </ion-row>
 
+  <ion-row>
+        
+    <ion-col>
+      <ion-label expand="full" (click)="openPopOverAccounts($event)">{{accountName!.name}}</ion-label>
+    </ion-col>
 
+  </ion-row>
 
     <ion-row>
       <ion-col>
