--- a/src/app/pages/suppliers-page/suppliers-page.page.html
+++ b/src/app/pages/suppliers-page/suppliers-page.page.html
@@ -1,4 +1,12 @@
-<app-main-menu class="main-menu" [textMenu]="'app_menu.suppliers'" [hasBackButton]="false" >  </app-main-menu>
+<ion-header>
+  <ion-toolbar>
+    <ion-title>{{ 'app_menu.suppliers' | translate }}</ion-title>
+  </ion-toolbar>
+  <span class="border-bottom-part-one"></span>
+  <span class="border-bottom-part-two"></span>
+  <span class="border-bottom-part-three"></span>
+  <span class="border-bottom-part-four"></span>
+</ion-header>
 
 <ion-content>
   <ion-header collapse="condense">
