--- a/src/app/pages/verfiy-otp/verfiy-otp.page.html
+++ b/src/app/pages/verfiy-otp/verfiy-otp.page.html
@@ -24,6 +24,9 @@
                 label-placement="floating" 
                 placeholder="{{'otp.enterotpnumber' | translate}}"
                 label="{{'otp.otpnumber' | translate}}"
+                [(ngModel)]="iVerfiyOtp.otp"
+                #otp="ngModel"
+                name="otp"
                 counter="true"
                 maxlength="6"
                 minlength="6"
