--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,89 @@
-<ion-app>
-  <ion-router-outlet></ion-router-outlet>
+<ion-app> 
+  
+  <ion-split-pane contentId="mainMenu">
+    @if(authenticate){
+    <ion-menu   side="start"  contentId="mainMenu"  >  
+      <ion-list lines="none">
+        <ion-menu-toggle auto-hide="false">
+          <ion-item detail="false">
+            <h1>
+              Main Menu
+            </h1>
+          </ion-item>
+          <ion-item detail="false" (click)="navigateToUrl('account-profile/:accountId')">
+            <ion-label>
+              <ion-text color="primary">
+                Account Profile
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item detail="false" >
+            <ion-label>
+              <ion-text color="primary">
+                Group
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item detail="false"  >
+            <ion-label>
+              <ion-text color="primary">
+                Category
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          <ion-item detail="false" >
+            <ion-label>
+              <ion-text color="primary">
+                Product
+              </ion-text>
+            </ion-label>
+          </ion-item>
+          
+          <ion-item detail="false" >
+            <ion-label>
+              <ion-text color="primary">
+                Product List
+              </ion-text>
+            </ion-label>
+          </ion-item>
+  
+          <ion-item detail="false"  >
+            <ion-label>
+              <ion-text color="primary">
+                Offer List
+              </ion-text>
+            </ion-label>
+          </ion-item>
+        </ion-menu-toggle>
+      </ion-list>
+
+
+    
+      <ion-accordion-group>
+        @for(item of bMenus.basicMenus;track item.name ){
+            <ion-accordion >
+              <ion-item slot="header">
+                <ion-label>{{ item.name }}</ion-label>
+              </ion-item>
+              <app-accordion [item]="item" slot="content"></app-accordion>
+            </ion-accordion>
+        }
+      </ion-accordion-group>
+
+        <ion-list>
+          <ion-item detail="false"  (click)="logOut()" >
+            <ion-label>
+              <ion-text color="primary">
+                Log Out
+              </ion-text>
+            </ion-label>
+          </ion-item>
+      </ion-list>
+      
+    </ion-menu>
+
+  }
+      <ion-router-outlet id="mainMenu" ></ion-router-outlet> 
+  </ion-split-pane> 
+  
 </ion-app>
