--- a/src/app/pages/list-groups/list-groups.page.html
+++ b/src/app/pages/list-groups/list-groups.page.html
@@ -1,9 +1,51 @@
-<app-main-menu class="main-menu" [textMenu]="'group.menuname'" [hasBackButton]="true" >  </app-main-menu>
+<ion-header>
+  <ion-toolbar>
+    <ion-buttons slot="start">
+      <ion-menu-button></ion-menu-button>
+    </ion-buttons>
+    <ion-title>{{ 'app_menu.list_groups' | translate }}</ion-title>
+    <ion-buttons slot="end">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <span class="border-bottom-part-one"></span>
+    <span class="border-bottom-part-two"></span>
+    <span class="border-bottom-part-three"></span>
+    <span class="border-bottom-part-four"></span>
+  </ion-toolbar>
+</ion-header>
 
-<ion-content >
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">list-groups</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content> 
+  
+  <ion-grid>
+    <ion-row >
+      @for(group of groups ; track group.name){
+       <ion-col size="4"  class="group-margin-padding">
+        <ion-card  class="card-back-color ion-no-margin ion-no-padding">
+          <div class="image-group">
+              <ion-thumbnail item-start>
+                <img src="{{ group.img }}">
+              </ion-thumbnail>
+          </div>
+          <ion-card-header>
+
+          </ion-card-header>
+
+          <ion-card-content>
+         
+          </ion-card-content>
+          
+         <div class="name-group">
+          {{ group.name }}
+         </div> 
+
+        </ion-card>
+
+    
+      </ion-col> 
+    }
+    </ion-row> 
+  </ion-grid> 
+
+  <!-- -->
+
 </ion-content>
