--- a/src/app/pages/start/start.page.html
+++ b/src/app/pages/start/start.page.html
@@ -1,5 +1,6 @@
 
 <ion-content [fullscreen]="true" >
+  <app-supplier-card></app-supplier-card>
     <div class="start-content" >
 
       <div class="select-language">
@@ -10,6 +11,8 @@
           }
         </ion-select>
       </div>  
+
+  
       
       <ion-grid class="start-grid" >
         <ion-row>
